Simplify/fix markup.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -947,7 +947,7 @@ not listed here).</p>
 <li><a href="http://gcc.gnu.org/PR11883">11883</a> ICE with any <code>-O</code> on mercury-generated C code</li>
 <li><a href="http://gcc.gnu.org/PR11991">11991</a> (c++) ICE in <code>cxx_incomplete_type_diagnostic</code>, in <code>cp/typeck2.c</code> when applying typeid operator to template template parameter</li>
 <li><a href="http://gcc.gnu.org/PR12146">12146</a> ICE in <code>lookup_template_function</code>, in <code>cp/pt.c</code></li>
-<li><a href="http://gcc.gnu.org/PR12215">12215</a> ICE in <code>make_label_edge</code> with <code>-fnon-call-exceptions</code> <code>-fno-gcse</code> <code>-O2</code></li>
+<li><a href="http://gcc.gnu.org/PR12215">12215</a> ICE in <code>make_label_edge</code> with <code>-fnon-call-exceptions -fno-gcse -O2</code></li>
 <li><a href="http://gcc.gnu.org/PR12369">12369</a> (c++) ICE with templates and friends</li>
 <li><a href="http://gcc.gnu.org/PR12446">12446</a> ICE in <code>emit_move_insn</code> on complicated array reference</li>
 <li><a href="http://gcc.gnu.org/PR12510">12510</a> ICE in <code>final_scan_insn</code></li>
@@ -984,7 +984,7 @@ template specialization</li>
 <li><a href="http://gcc.gnu.org/PR12236">12236</a> regparm and fastcall messes up parameters</li>
 <li><a href="http://gcc.gnu.org/PR12266">12266</a> incorrect instantiation of unneeded template during overload resolution</li>
 <li><a href="http://gcc.gnu.org/PR12296">12296</a> istream::peek() doesn't set eofbit</li>
-<li><a href="http://gcc.gnu.org/PR12298">12298</a> [sjlj exceptions] Stack unw
+<li><a href="http://gcc.gnu.org/PR12298">12298</a> [sjlj exceptions] Stack unwind destroys not-yet-constructed object</li>
 <li><a href="http://gcc.gnu.org/PR12369">12369</a> ICE ith templates and friends</li>
 <li><a href="http://gcc.gnu.org/PR12337">12337</a> apparently infinite loop in g++</li>
 ind destroys not-yet-constructed object</li>
@@ -1016,7 +1016,7 @@ ind destroys not-yet-constructed object</li>
 <h4>SPARC-specific</h4>
 <ul>
 <li><a href="http://gcc.gnu.org/PR11662">11662</a> wrong code for expr. with cast to <code>long long</code> and exclusive or</li>
-<li><a href="http://gcc.gnu.org/PR11965">11965</a> invalid assembler code for a shift &lt;< 32 operation</li>
+<li><a href="http://gcc.gnu.org/PR11965">11965</a> invalid assembler code for a shift &lt; 32 operation</li>
 <li><a href="http://gcc.gnu.org/PR12301">12301</a> (c++) stack corruption when a returned expression throws an exception</li>
 </ul>
 <h4>Alpha-specific</h4>
