--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -114,6 +114,7 @@ names.
    <br />Manufacturer: Renesas
    <br />Exact chip name: H8/300
    <br />GDB includes a simulator.
+   <br /><a href="http://www.gnuh8.org/">GNUH8 Mailing List</a>.
  </li>
  
  <li>i370
