--- a/htdocs/gcc-3.3/index.html
+++ b/htdocs/gcc-3.3/index.html
@@ -26,11 +26,11 @@ variety of targets and test packages.</p>
 <dl>
 <dt>GCC 3.3.2</dt>
 <dd><a name="3.3.2">October 16, 2003</a>
-    (<a href="changes.html">changes</a>)
+    (<a href="changes.html#3.3.2">changes</a>)
 </dd>
 <dt>GCC 3.3.1</dt>
 <dd><a name="3.3.1">August 8, 2003</a>
-    (<a href="changes.html">changes</a>)
+    (<a href="changes.html#3.3.1">changes</a>)
 </dd>
 <dt>GCC 3.3</dt>
 <dd><a name="3.3">May 14, 2003</a>
