--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -49,7 +49,7 @@ to maintain and improve quality.</p>
 -->
 
 <dt><strong>Current release series:</strong>
-  <a href="gcc-3.3/">GCC 3.3.1</a> (released 2003-08-08)
+  <a href="gcc-3.3/">GCC 3.3.2</a> (released 2003-08-08)
 </dt><dd>
   The branch is open for regression fixes only.
 </dd>
@@ -89,6 +89,11 @@ to maintain and improve quality.</p>
 <h2><small>News/Announcements</small></h2>
 
 <dl>
+
+<dt><b>October 17, 2003</b></dt>
+<dd>
+<a href="gcc-3.3/">GCC 3.3.2</a> has been released.
+</dd>
 
 <dt><b>August 27, 2003</b></dt>
 <dd>
