2003-10-17  Toon Moene  <toon@moene.indiv.nluug.nl>
	* compilerstatus.html: Conform to our spelling conventions w.r.t.
	front end, back end, etc.
	* todo.html: Conform to spelling conventions w.r.t. compatibility,
	period.

--- a/htdocs/fortran/todo.html
+++ b/htdocs/fortran/todo.html
@@ -52,7 +52,7 @@ arrays).</li>
 initializers.</li>
   <li>Use of array parameters in array declarations.</li>
   <li>Teach the scalarizer bounds calculation code about functions.</li>
-  <li>Fix g77/f2c compatabiliy for returning complex numbers, and other
+  <li>Fix g77/f2c compatibility for returning complex numbers, and other
 wierdness.</li>
   <li>Fix sequence association for non-g77 compatible fucntions.</li>
 </ul>
