Fix a confusion between the 3.3 release series and GCC 3.3.2. Disable the link to the (essentially incomplete) GCJ status page.

--- a/htdocs/gcc-3.3/index.html
+++ b/htdocs/gcc-3.3/index.html
@@ -13,13 +13,15 @@
 <p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
 developers are pleased to announce the release of GCC 3.3.2.</p>
 
-<p>GCC 3.3.2 includes numerous <a href="changes.html">new features,
-improvements, bug fixes, and other changes</a>, thanks to an <a
+<p>The GCC 3.3 release series includes numerous <a href="changes.html">new
+features, improvements, bug fixes, and other changes</a>, thanks to an <a
 href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">amazing
 group of volunteers</a>.</p>
 
+<!--
 <p><a href="gcj-status.html">GCJ 3.3 status</a> is tracked for a
 variety of targets and test packages.</p>
+-->
 
 <h2>Release History</h2>
 
