2003-10-18  Toon Moene  <toon@moene.indiv.nluug.nl>
	* index.html: Add Fortran web pages.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -144,7 +144,8 @@ which took place May 25-27, 2003.
 <a href="news.html">Older news and announcements...</a>
 <br />
 <a href="java/index.html#news">GCJ news</a>
-| <a href="http://gcc.gnu.org/onlinedocs/g77/News.html">Fortran news</a>
+| <a href="http://gcc.gnu.org/onlinedocs/g77/News.html">Fortran 77 news</a>
+| <a href="fortran/index.html">Fortran 95 status</a>
 
 <include searchbox.ihtml>
 
