Announce m68k-uclinux target and ColdFire improvements.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -90,6 +90,14 @@ to maintain and improve quality.</p>
 
 <dl>
 
+<dt><b>October 18, 2003</b></dt>
+<dd>
+Bernardo Innocenti of Develer S.r.l. has contributed the
+<a href="http://www.uclinux.org/pub/uClinux/uclinux-elf-tools/gcc-3/">
+m68k-uclinux target</a> and improved support for ColdFire cores, based
+on former work by Paul Dale (SnapGear, Inc.) and Peter Barada (Motorola, Inc.).
+</dd>
+
 <dt><b>October 17, 2003</b></dt>
 <dd>
 <a href="gcc-3.3/">GCC 3.3.2</a> has been released.
