* Add paragraphs about target milestones and duplicates to the   "Procedures and Policies" section.

--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -235,6 +235,15 @@ report her findings in any case (whether positive or negative).</p>
 information that is necessary for reproducing the problem can be closed
 if no response was received for three months.</p>
 
+<p><strong>When closing a PR</strong> because it got fixed, please
+set the <strong>target milestone</strong> to the first release where
+it will be/has been fixed.  Also adjust the target milestone when a
+fix is <strong>backported</strong>.</p>
+
+<p><strong>Duplicate PRs</strong> should be marked as such.  If you
+encounter a PR that is marked as "resolved fixed", but should be marked
+as a duplicate, please change the resolution.  (You have to reopen the
+PR before you can resolve it as a duplicate.)</p>
 
 </body>
 </html>
