Add missing period.

--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -117,7 +117,7 @@ for good, or can be re-opened and change to <b>REOPENED</b>.</dd>
 <dd> A fix for this bug is checked into the tree and tested.</dd>
 
 <dt><b>INVALID</b></dt>
-<dd> The problem described is not a bug</dd> 
+<dd> The problem described is not a bug.</dd> 
 
 <dt><b>WONTFIX</b></dt>
 <dd> The problem described is a bug which will never be fixed.</dd>
