--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -520,6 +520,14 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
+<td>powerpc-apple-darwin7.0.0b1</td>
+<td> Mac OS X 10.3</td>
+<td>Bootstrap (with tweaks):
+<a href="http://gcc.gnu.org/ml/gcc/2003-10/msg00565.html">3.3.1</a>
+</td>
+</tr>
+
+<tr>
 <td>powerpc-ibm-aix5.2.0.0</td>
 <td>&nbsp;</td>
 <td>Bootstrap:
