Bootstrap and test results for 3.3.2:
  i686-pc-linux-gnu (Red Hat 7.3, glibc 2.2.5, binutils 2.14.90.0,
      kernel 2.4.21)

Bootstrap for 3.3.2:

  i586-pc-linux-gnu (Debian 3.0, glibc 2.3.2, kernel 2.2.20)
  i686-pc-linux-gnu (Slackware 8.0, glibc 2.3.1, kernel 2.6.0)
  powerpc-apple-darwin6.8 (Mac OS X 10.2.8)

Test results for 3.3.2:

  alpha-unknown-freebsd5.1
  alpha-unknown-linux-gnu
  arm-unknown-linux-gnu (2)
  armv5l-unknown-linux-gnu
  hppa-unknown-linux-gnu (2)
  i486-pc-linux-gnu
  i586-pc-linux-gnu
  i586-suse-linux-gnu
  i686-pc-cygwin
  i686-pc-linux-gnu (3)
  ia64-suse-linux-gnu
  ia64-unknown-linux-gnu (3)
  mips-sgi-irix6.5
  mips-sgi-irix6.5
  powerpc-apple-darwin6.3
  powerpc-apple-darwin6.8
  powerpc-unknown-linux-gnu
  s390-ibm-linux-gnu
  sparc-sun-solaris2.7
  sparc-unknown-linux-gnu
  sparc64-sun-solaris2.7
  x86_64-suse-linux-gnu

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -35,6 +35,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>alpha-unknown-freebsd5.1</td>
 <td>GNU make, build in objdir</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00714.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00841.html">3.3</a>
 </td>
 </tr>
@@ -67,6 +68,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>alpha-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00794.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01096.html">3.3</a>
 </td>
 </tr>
@@ -115,8 +117,10 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>arm-unknown-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01458.html">3.3</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00465.html">3.3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00836.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00748.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00465.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01458.html">3.3</a>
 </td>
 </tr>
 
@@ -124,6 +128,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>armv5l-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00799.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00878.html">3.3</a>
 </td>
 </tr>
@@ -132,6 +137,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>hppa-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00805.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00751.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01095.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00939.html">3.3</a>
 </td>
@@ -232,6 +239,30 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
+<td>i486-pc-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00752.html">3.3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00712.html">3.3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
+<td>Debian 3.0, glibc 2.3.2, kernel 2.2.20</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-10/msg00811.html">3.3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>i586-pc-linux-gnu</td>
 <td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.20</td>
 <td>Bootstrap:
@@ -251,6 +282,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i686-pc-cygwin</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00840.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01052.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00872.html">3.3</a>
 </td>
@@ -272,16 +304,19 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00803.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00789.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00739.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00800.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00613.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00502.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01208.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01114.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01023.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01017.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00948.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00945.html">3.3</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00940.html">3.3</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00800.html">3.3.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00613.html">3.3.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00502.html">3.3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00940.html">3.3</a>
 </td>
 </tr>
 
@@ -348,6 +383,16 @@ NOTE: the submitter reported that thread support is broken and asked
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.3, glibc 2.2.5, binutils 2.14.90.0, kernel 2.4.21</td>
+<td>Bootstrap:
+<a href="">3.3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00835.html">3.3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 8.0, binutils 2.13.90.0.2, glibc 2.3.2, kernel 2.4.18</td>
 <td>Bootstrap (with Ada):
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01824.html">3.3</a>
@@ -372,6 +417,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>Red Hat 9, glibc 2.3.2</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01589.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Slackware 8.0, glibc 2.3.1, kernel 2.6.0</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-10/msg00789.html">3.3.2</a>
 </td>
 </tr>
 
@@ -430,16 +483,20 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>ia64-suse-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00731.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00863.html">3.3</a>
 </td>
 </tr>
 
 <tr>
 <td>ia64-unknown-linux-gnu</td>
-<td>Debian</td>
+<td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01183.html">3.3</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00463.html">3.3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00793.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00763.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00749.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00463.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01183.html">3.3</a>
 </td>
 </tr>
 
@@ -463,6 +520,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>mips-sgi-irix6.5</td>
 <td>test runs for -mabi=64 and -mips4</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00758.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00942.html">3.3</a>
 </td>
 </tr>
@@ -471,6 +529,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>mips-sgi-irix6.5</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00842.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00896.html">3.3</a>
 </td>
 </tr>
@@ -504,6 +563,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>powerpc-apple-darwin6.3</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00727.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00858.html">3.3</a>
 </td>
 </tr>
@@ -516,6 +576,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00505.html">3.3.1</a>;
 <br />Bootstrap (C, C++, F77, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01487.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin6.8</td>
+<td>Mac OS X 10.2.8</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2003-10/msg00770.html">3.3.2</a>
 </td>
 </tr>
 
@@ -539,6 +607,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>powerpc-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00771.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01093.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01000.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00881.html">3.3</a>,
@@ -567,6 +636,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>s390-ibm-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00792.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01356.html">3.3</a>
 </td>
 </tr>
@@ -625,6 +695,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-sun-solaris2.7</td>
 <td>test runs for -m64, -fPIC, and -fpic</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00762.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00944.html">3.3</a>
 </td>
 </tr>
@@ -674,8 +745,9 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-unknown-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01357.html">3.3</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00464.html">3.3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00837.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00464.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01357.html">3.3</a>
 </td>
 </tr>
 
@@ -701,6 +773,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc64-sun-solaris2.7</td>
 <td>test runs for -m32, -fPIC, and -fpic</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00761.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00997.html">3.3</a>
 </td>
 </tr>
@@ -728,6 +801,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>SuSE Linux Enterprise Server 8, glibc 2.2.5, kernel 2.4.19;
 <br />test runs with and without -m32</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00729.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00996.html">3.3</a>
 </td>
 </tr>
