--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -36,6 +36,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>GNU make, build in objdir</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00714.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00234.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00841.html">3.3</a>
 </td>
 </tr>
@@ -44,6 +45,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>alpha-unknown-freebsd5.1</td>
 <td>GNU make, build in srcdir</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00246.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00853.html">3.3</a>
 </td>
 </tr>
@@ -69,6 +71,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00794.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00342.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01096.html">3.3</a>
 </td>
 </tr>
@@ -129,6 +132,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00799.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00304.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00878.html">3.3</a>
 </td>
 </tr>
@@ -139,6 +143,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00805.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00751.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00458.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00341.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01095.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00939.html">3.3</a>
 </td>
@@ -158,6 +164,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>hppa2.0w-hp-hpux11.00</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00481.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00924.html">3.3</a>
 </td>
 </tr>
@@ -178,6 +185,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>hppa64-hp-hpux11.00</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00522.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00950.html">3.3</a>
 </td>
 </tr>
@@ -186,6 +194,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i386-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00344.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01094.html">3.3</a>
 </td>
 </tr>
@@ -194,6 +203,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i386-unknown-freebsd4.8</td>
 <td>GNU make, build in objdir</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00236.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00844.html">3.3</a>
 </td>
 </tr>
@@ -202,6 +212,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i386-unknown-freebsd4.8</td>
 <td>GNU make, build in srcdir</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00251.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00857.html">3.3</a>
 </td>
 </tr>
@@ -250,7 +261,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i586-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00712.html">3.3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00712.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00233.html">3.3.1</a>
 </td>
 </tr>
 
@@ -279,10 +291,28 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
+<td>i586-pc-sco3.2v5.0</td>
+<td>(with patches)</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00287.html">3.3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>i586-suse-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00293.html">3.3.1</a>
+</td>
+</tr>
+
+<tr>
 <td>i686-pc-cygwin</td>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00840.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00389.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00235.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01052.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00872.html">3.3</a>
 </td>
@@ -307,9 +337,12 @@ NOTE: the submitter reported that thread support is broken and asked
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00803.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00789.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00739.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg01179.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg01091.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00800.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00613.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00502.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00218.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01208.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01114.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01023.html">3.3</a>,
@@ -484,6 +517,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00731.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00382.html">3.3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00372.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00863.html">3.3</a>
 </td>
 </tr>
@@ -496,6 +531,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00763.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00749.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00463.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00333.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01183.html">3.3</a>
 </td>
 </tr>
@@ -504,6 +540,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>mips-sgi-irix6.2</td>
 <td>test runs for -mabi=64 and -mips4</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00307.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00943.html">3.3</a>
 </td>
 </tr>
@@ -521,6 +558,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>test runs for -mabi=64 and -mips4</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00758.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00275.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00942.html">3.3</a>
 </td>
 </tr>
@@ -530,6 +568,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00842.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00384.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00297.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00896.html">3.3</a>
 </td>
 </tr>
@@ -564,6 +604,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00727.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00226.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00858.html">3.3</a>
 </td>
 </tr>
@@ -608,6 +649,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00771.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00366.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00343.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01093.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01000.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00881.html">3.3</a>,
@@ -628,6 +671,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>powerpc-unknown-linux-gnu</td>
 <td>YellowDog 2.3, glibc 2.3.2, binutils 2.14.90.0.5, kernel 2.4.20</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2003-10/msg00879.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00795.html">3.3.1</a>
 </td>
 </tr>
@@ -637,6 +681,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>Debian</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00792.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00345.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01356.html">3.3</a>
 </td>
 </tr>
@@ -696,6 +741,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>test runs for -m64, -fPIC, and -fpic</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00762.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00301.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00944.html">3.3</a>
 </td>
 </tr>
@@ -704,6 +750,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-sun-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00504.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01406.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01178.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00910.html">3.3</a>
@@ -774,6 +821,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>test runs for -m32, -fPIC, and -fpic</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00761.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00299.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00997.html">3.3</a>
 </td>
 </tr>
