Note that cast-as-lvalue is deprecated for C and Objective-C, and add another example.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -76,6 +76,21 @@
 	a correct implementation of <code>#import</code> and
         <code>#pragma once</code>.
 	These two directives have therefore been un-deprecated.</li>
+    <li>The cast-as-lvalue extension has been removed for C++ and
+        deprecated for C and Objective-C.  In particular,
+        code like this:
+        <pre>
+        int i;
+        (char) i = 5;
+        </pre>
+        <p>or this:</p>
+        <pre>
+        char *p;
+        ((int *) p)++;
+        </pre>
+        <p>is no longer accepted for C++ and will not be accepted for
+        C and Objective-C in a future version.</p></li>
+
   </ul>
 
 <h3>C++</h3>
@@ -211,14 +226,6 @@
         the declaration of <code>g</code> before the declaration of
 	<code>f</code>.  The default arguments for <code>g</code> must
 	be visible at the point where it is called.</p></li>
-
-    <li>The cast-as-lvalue extension has been removed.  In particular,
-        code like this:
-        <pre>
-        int i;
-        (char) i = 5;
-        </pre>
-        <p>is no longer accepted.</p></li>
 
     <li>The C++ ABI Section 3.3.3 specifications for the array
         construction routines <code>__cxa_vec_new2</code> and
