Document libada branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -245,6 +245,11 @@ particular releases or snapshots or the latest snapshot.  </p>
   by <a href="mailto:zlaski@apple.com"> Zem Laski &lt;zlaski@apple.com&gt;
   </a>.</dd>
 
+  <dt>libada-branch</dt>
+  <dd>This branch exists to solve
+  <a href="http://gcc.gnu.org/bugzilla/show_bug.cgi?id=5911">bug 5911</a>,
+  by breaking out the Ada runtime and utilities into a libada directory.</dd>
+
 </dl>
 
 <h3><a name="olddevbranches">Inactive Development Branches</a></h3>
