I eliminated the exotic fixincludes scripts, and current consensus is to run fixproto on as few targets as possible.  This updates the projects list appropriately.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -714,8 +714,7 @@ We have several that would be widely useful, such as
 <code>GCC_NEED_DECLARATIONS</code> and the <code>mmap</code> tests.</p>
 </li>
 
-<li>Run fixincludes and fixproto on all targets.  Eliminate the
-exotic fixincludes scripts used on some targets.
+<li>Run fixincludes on all targets.
 
 <p>We want all targets' headers to be handled the same way.  The
 existing practice causes hard-to-find bugs which only manifest on
