Add PR 12114 to the 3.3.2 release notes.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -975,6 +975,7 @@ not listed here).</p>
 <li><a href="http://gcc.gnu.org/PR11786">11786</a> operator() call on variable in other namespace not recognized</li>
 <li><a href="http://gcc.gnu.org/PR11867">11867</a> static_cast ignores ambiguity</li>
 <li><a href="http://gcc.gnu.org/PR11928">11928</a> bug with conversion operators that are typedefs</li>
+<li><a href="http://gcc.gnu.org/PR12114">12114</a> Uninitialized memory accessed in dtor</li>
 <li><a href="http://gcc.gnu.org/PR12163">12163</a> static_cast + explicit constructor regression</li>
 <li><a href="http://gcc.gnu.org/PR12181">12181</a> Wrong code with comma operator and c++</li>
 <li><a href="http://gcc.gnu.org/PR12236">12236</a> regparm and fastcall messes up parameters</li>
