--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -162,6 +162,11 @@ particular releases or snapshots or the latest snapshot.  </p>
   to header file processing.  Patches should be marked with the tag
   <code>[cs]</code> in the subject line.</dd>
 
+  <dt>csl-arm-branch</dt>
+  <dd>CodeSourcery branch for developing ARM back end improvements.
+  No check-ins should be made to this branch unless authorized by
+  CodeSourcery personnel.</dd>
+
   <dt>dfa-branch</dt>
   <dd>This branch contains the insn scheduler with an automaton
   based pipeline hazard recognizer.</dd>
